--- a/app/views/invoices/edit.html.erb
+++ b/app/views/invoices/edit.html.erb
@@ -1,6 +1,6 @@
-<h1>Editing invoice</h1>
+<h1>Редактирование счета</h1>
 
 <%= render 'form' %>
 
-<%= link_to 'Show', @invoice %> |
-<%= link_to 'Back', invoices_path %>
+<%= link_to 'Просмотр', @invoice %> |
+<%= link_to 'Назад', invoices_path %>
