--- a/app/views/invoices/show.html.erb
+++ b/app/views/invoices/show.html.erb
@@ -1,42 +1,37 @@
 <p id="notice"><%= notice %></p>
 
 <p>
-  <b>Categoryid:</b>
-  <%= @invoice.categoryid %>
-</p>
-
-<p>
-  <b>Number:</b>
+  <b>Номер счета:</b>
   <%= @invoice.number %>
 </p>
 
 <p>
-  <b>Date:</b>
+  <b>Дата:</b>
   <%= @invoice.date %>
 </p>
 
 <p>
-  <b>Goods:</b>
+  <b>Товары:</b>
   <%= @invoice.goods %>
 </p>
 
 <p>
-  <b>Price:</b>
+  <b>Цена:</b>
   <%= @invoice.price %>
 </p>
 
 <p>
-  <b>Sale:</b>
+  <b>Скидка:</b>
   <%= @invoice.sale %>
 </p>
 
 <p>
-  <b>Total:</b>
+  <b>Сумма:</b>
   <%= @invoice.total %>
 </p>
 
 <p>
-  <b>Comments:</b>
+  <b>Коментарии:</b>
   <%= @invoice.comments %>
 </p>
 
