--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -5,15 +5,14 @@
   </small>
   <nav>
     <ul>
-          <li><%= link_to "Home",    root_path %></li>
-          <li><%= link_to "Clients",    clients_path %></li>
-          <li><%= link_to "Products",    categories_path %></li>
-          <li><%= link_to "Invoices",    invoices_path %></li>
-          <li><%= link_to "Logistic",    logistics_path %></li>
-          <li><%= link_to "Analitics",    analitics_path %></li>
-          <li><%= link_to "Tasks",    tasks_path %></li>
-          <li><%= link_to "Help",    help_path %></li>
-          <li><%= link_to "Contact", contact_path %></li>
+          <li><%= link_to "Главная",    root_path %></li>
+          <li><%= link_to "Контрагенты",    clients_path %></li>
+          <li><%= link_to "Товары",    store_path %></li>
+          <li><%= link_to "Счета",    invoices_path %></li>
+          <li><%= link_to "Логистика",    logistics_path %></li>
+          <li><%= link_to "Аналитика",    analitics_path %></li>
+          <li><%= link_to "Задачи",    tasks_path %></li>
+          <li><%= link_to "Помощь",    help_path %></li>
 
     </ul>
   </nav>
