--- a/app/views/clients/edit.html.erb
+++ b/app/views/clients/edit.html.erb
@@ -1,6 +1,6 @@
-<h1>Editing client</h1>
+<h1>Редактирование контрагента</h1>
 
 <%= render 'form' %>
 
-<%= link_to 'Show', @client %> |
-<%= link_to 'Back', clients_path %>
+<%= link_to 'Просмотр', @client %> |
+<%= link_to 'Назад', clients_path %>
