--- a/app/views/clients/index.html.erb
+++ b/app/views/clients/index.html.erb
@@ -1,12 +1,12 @@
-<h1>Listing clients</h1>
+<h1>Список контрагентов</h1>
 
 <table>
   <tr>
-    <th>Count</th>
-    <th>Name</th>
-    <th>Contact</th>
-    <th>Comments</th>
-    <th>Sale</th>
+    <th>Номер</th>
+    <th>Имя</th>
+    <th>Контактные данные</th>
+    <th>Комментарии</th>
+    <th>Скидка</th>
     <th></th>
     <th></th>
     <th></th>
@@ -19,13 +19,13 @@
     <td><%= client.contact %></td>
     <td><%= client.comments %></td>
     <td><%= client.sale %></td>
-    <td><%= link_to 'Show', client %></td>
-    <td><%= link_to 'Edit', edit_client_path(client) %></td>
-    <td><%= link_to 'Destroy', client, confirm: 'Are you sure?', method: :delete %></td>
+    <td><%= link_to 'Просмотр', client %></td>
+    <td><%= link_to 'Редактирование', edit_client_path(client) %></td>
+    <td><%= link_to 'Удаление', client, confirm: 'Вы уверены?', method: :delete %></td>
   </tr>
 <% end %>
 </table>
 
 <br />
 
-<%= link_to 'New Client', new_client_path %>
+<%= link_to 'Добавить контрагента', new_client_path %>
