--- a/app/views/invoices/new.html.erb
+++ b/app/views/invoices/new.html.erb
@@ -1,5 +1,5 @@
-<h1>New invoice</h1>
+<h1>Новый счет</h1>
 
 <%= render 'form' %>
 
-<%= link_to 'Back', invoices_path %>
+<%= link_to 'Назад', invoices_path %>
