--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,21 +1,19 @@
 <header class="navbar navbar-fixed-top">
   <div class="navbar-inner">
     <div class="container">
-      <%= link_to "Technika CRM App", '#', id: "logo" %>
+      <%= link_to "Technika CRM App", 'root_path', id: "logo" %>
       <nav>
       	
         <ul class="nav pull-right">
-          <li><%= link_to "Home",    root_path %></li>
-          <li><%= link_to "Clients",    clients_path %></li>
-          <li><%= link_to "Products",    categories_path %></li>
-          <li><%= link_to "Invoices",    invoices_path %></li>
-          <li><%= link_to "Logistic",    logistics_path %></li>
-          <li><%= link_to "Analitics",    analitics_path %></li>
-          <li><%= link_to "Tasks",    tasks_path %></li>
-          <li><%= link_to "Help",    help_path %></li>
+          <li><%= link_to "Главная",    root_path %></li>
+          <li><%= link_to "Контрагенты",    clients_path %></li>
+          <li><%= link_to "Товары",    store_path %></li>
+          <li><%= link_to "Счета",    invoices_path %></li>
+          <li><%= link_to "Логистика",    logistics_path %></li>
+          <li><%= link_to "Аналитика",    analitics_path %></li>
+          <li><%= link_to "Задачи",    tasks_path %></li>
+          <li><%= link_to "Помощь",    help_path %></li>
 
-
-          <li><%= link_to "Sign in", '#' %></li>
         </ul>
       </nav>
     </div>
