--- a/app/views/logistics/edit.html.erb
+++ b/app/views/logistics/edit.html.erb
@@ -1,6 +1,6 @@
-<h1>Editing logistic</h1>
+<h1>Редактирование отгрузки</h1>
 
 <%= render 'form' %>
 
-<%= link_to 'Show', @logistic %> |
-<%= link_to 'Back', logistics_path %>
+<%= link_to 'Просмотр', @logistic %> |
+<%= link_to 'Назад', logistics_path %>
