--- a/app/views/logistics/index.html.erb
+++ b/app/views/logistics/index.html.erb
@@ -1,12 +1,12 @@
-<h1>Listing logistics</h1>
+<h1>Журнал отгрузок</h1>
 
 <table>
   <tr>
-    <th>Date</th>
-    <th>Logistic</th>
-    <th>Docnumber</th>
-    <th>Comments</th>
-    <th>Client</th>
+    <th>Дата</th>
+    <th>Транспортная компания</th>
+    <th>Номер накладной</th>
+    <th>Комментарии</th>
+    <th>Контрагент</th>
     <th></th>
     <th></th>
     <th></th>
@@ -19,13 +19,13 @@
     <td><%= logistic.docnumber %></td>
     <td><%= logistic.comments %></td>
     <td><%= logistic.client %></td>
-    <td><%= link_to 'Show', logistic %></td>
-    <td><%= link_to 'Edit', edit_logistic_path(logistic) %></td>
-    <td><%= link_to 'Destroy', logistic, confirm: 'Are you sure?', method: :delete %></td>
+    <td><%= link_to 'Просмотр', logistic %></td>
+    <td><%= link_to 'Редактирование', edit_logistic_path(logistic) %></td>
+    <td><%= link_to 'Удаление', logistic, confirm: 'Вы уверены?', method: :delete %></td>
   </tr>
 <% end %>
 </table>
 
 <br />
 
-<%= link_to 'New Logistic', new_logistic_path %>
+<%= link_to 'Добавить отгрузку', new_logistic_path %>
