--- a/app/views/logistics/new.html.erb
+++ b/app/views/logistics/new.html.erb
@@ -1,5 +1,5 @@
-<h1>New logistic</h1>
+<h1>Новая отгрузка</h1>
 
 <%= render 'form' %>
 
-<%= link_to 'Back', logistics_path %>
+<%= link_to 'Назад', logistics_path %>
