--- a/app/views/logistics/index.html.erb
+++ b/app/views/logistics/index.html.erb
@@ -1,6 +1,6 @@
 <h1>Журнал отгрузок</h1>
 
-<table>
+<table class="table table-striped">
   <tr>
     <th>Дата</th>
     <th>Транспортная компания</th>
