--- a/app/views/products/edit.html.erb
+++ b/app/views/products/edit.html.erb
@@ -3,4 +3,4 @@
 <%= render 'form' %>
 
 <%= link_to 'Просмотр', @product %> |
-<%= link_to 'Назад, products_path %>
+<%= link_to 'Назад', products_path %>
