--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -12,11 +12,15 @@
  *= require_tree .
 */
 
-th .asc {
-	background-image: url('assets/up_arrow.gif')
+.pretty th .current {
+  padding-right: 12px;
+  background-repeat: no-repeat;
+  background-position: right center;
+}
+.pretty th .asc { 
+  background-image: url(/images/up_arrow.gif); 
 }
 
-
-th .desc {
-	background-image: url('assets/down_arrow.gif')
+.pretty th .desc { 
+  background-image: url(/images/down_arrow.gif); 
 }
