--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -9,6 +9,8 @@
  * compiled file, but it's generally better to create a new file per style scope.
  *
  *= require_self
+ *= require chosen
+ *= require token-input-facebook
  *= require_tree .
 */
 
@@ -24,3 +26,5 @@
 .pretty th .desc { 
   background-image: url(/images/down_arrow.gif); 
 }
+
+
